made the spacing and margins

--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -67,7 +67,7 @@ nav li a:hover{
 }
 
 .hero{
-    margin: 128px 0 168px;
+    margin: 168px 0 168px;
     animation: 0.8s ease-in-out 0s 1 slideInFromTop;
 }
 
@@ -237,7 +237,7 @@ footer{
 }
 
 .contact a:hover{
-    color: #DEFF12;
+    color: #4B6CF0;
     top: -5px;
 }
 
@@ -293,15 +293,37 @@ footer li{
     .grid-container{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
         gap: 24px 0px;
     }
 
     .study{
         margin-right: 32px;
+        margin-bottom: 16px;
     }
 
     .study-icon{
         margin-bottom: 96px;
+    }
+
+    .cta-section{
+        margin-top: 64px;
+        margin-left: 32px;
+        margin-right: 32px;
+        height: 360px;
+    }
+
+    .cta-section h1{
+        font-size: 32px;
+        margin-top: 48px;
+    }
+
+    .cta-section h3{
+        margin-left: 48px;
+        margin-top: -94px;
+    }
+
+    .contact li{
+        font-size: 18px;
     }
 }
