--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -5,6 +5,16 @@ body{
     margin: 0;
 }
 
+::-moz-selection{
+    color: #06080C;
+    background: #fff;  
+}
+
+::selection{
+    color: #06080C;
+    background: #fff;
+}
+
 @keyframes slideInFromTop {
     0% {
       transform: translateY(-25%);
@@ -56,6 +66,10 @@ nav li a{
     transition: top ease 0.6s;
 }
 
+nav li a:active:focus{
+    color: #3A59D4;
+}
+
 nav li a:hover{
     color: #4B6CF0;
     top: -5px;
@@ -80,6 +94,19 @@ nav li a:hover{
 .about{
     display: inline-block;
     animation: 0.8s ease-in-out 0s 1 slideInFromTop;
+}
+
+.about a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.about a:active:focus{
+    color: #3A59D4;
+}
+
+.about a:hover{
+    color:  #4B6CF0;
 }
 
 .about h2{
@@ -134,10 +161,16 @@ h3{
     font-size: 16px;
     font-weight: 600;
     max-width: 168px;
-    padding: 16px 0;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding: 8px 0;
     position: relative;
     top: 0;
     transition: top ease 0.6s;
+}
+
+.button-text:active:focus{
+    color: #3A59D4;
 }
 
 .button-text:hover{
@@ -173,6 +206,19 @@ h3{
     margin-bottom: 0px;
 }
 
+.study a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.study a:active:focus{
+    color: #3A59D4;
+}
+
+.study a:hover{
+    color: #4B6CF0;
+}
+
 .study-icon{
     height: 24px;
     width: 24px;
@@ -192,7 +238,7 @@ h3{
     margin-top: 96px;
     margin-left: 72px;
     margin-right: 72px;
-    background-image: url(../img/background.png);
+    background-image: url(../img/background.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -210,7 +256,13 @@ h3{
 }
 
 .cta-section h3{
-    margin-top: 0;
+    margin-top: -96px;
+    margin-left: 48px;
+}
+
+.cta-section a{
+    text-decoration: none;
+    color: #D4D9EC;
 }
 
 footer{
@@ -228,7 +280,7 @@ footer{
     font-weight: 700;
 }
 
-.contact a{
+footer a{
     text-decoration: none;
     color: #fff;
     position: relative;
@@ -236,7 +288,11 @@ footer{
     transition: top ease 0.5s;
 }
 
-.contact a:hover{
+footer a:active:focus{
+    color: #3A59D4;
+}
+
+footer a:hover{
     color: #4B6CF0;
     top: -5px;
 }
@@ -297,6 +353,10 @@ footer li{
         gap: 24px 0px;
     }
 
+    .case-studies{
+        margin-top: 64px;
+    }
+
     .study{
         margin-right: 32px;
         margin-bottom: 16px;
@@ -321,6 +381,10 @@ footer li{
     .cta-section h3{
         margin-left: 48px;
         margin-top: -94px;
+    }
+
+    footer{
+        height: 548px;
     }
 
     .contact li{
